refactored to joins